2004-12-06 Scott Dattalo <scott@dattalo.com>
	* src/socket.cc: Wrap gtk2.x calls with #defines
	
2004-12-02 Scott Dattalo <scott@dattalo.com>
	* src/socket.cc: More additions to SocketLinks. It's now possible
	to tie a socket to a gpsim attribute. This allows an external
	application to directly control gpsim's behavior.

2004-12-02 Scott Dattalo <scott@dattalo.com>
	* src/pic-processor.h, src/pic-processor.cc, src/p16f87x.h,
	src/p16f87x.cc: Added the PIC 16f876
	
2004-12-01 Scott Dattalo <scott@dattalo.com>
	* cli/socket.cc: Fixed the socket interface for issues related
	to gtk 2.x. Began adding the SockeLink class. This class will
	sit on top of the socket interface and will hide it from the 
	clients. The clients will be able to open SocketLinks and connect
	directly to gpsim internal objects.
	
2004-12-01 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: MSVC sync

2004-11-30 Scott Dattalo <scott@dattalo.com>
	* gpsim/gpsim.vcproj: Removed references to files resource.h and
	gpsim.rc.

2004-11-30 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_break.cc, cli/cmd_break.h, cli/cmd_help.cc, cli/cmd_help.h,
	cli/cmd_load.cc, cli/cmd_load.h, cli/cmd_log.cc, cli/cmd_log.h,
	cli/cmd_macro.cc,, cli/cmd_macro.h, cli/cmd_module.cc, cli/cmd_module.h,
	cli/cmd_processor.cc,, cli/cmd_processor.h, cli/cmd_symbol.cc,
	cli/cmd_symbol.h, cli/command.cc, cli/misc.h, cli/parse.yy, cli/scan.ll:
	Changed the parser token STRING to LITERAL_STRING_T. The reason for
	this is to allow string type attributes to be treated like numeric 
	attributes.
	* src/pic-processor.cc, src/pic-processor.h, src/processor.cc,
	src/processor.h, src/symbol.cc, src/symbol.h, src/value.cc,
	src/value.h:
	- Enhanced the 'String' class so that 1) it uses char * instead
	of STL string (yes this IS an enhancement) 2) the set() and get()
	methods can read and write to the String class.
	- Changed many instances of 'char *' to 'const char *'.

2004-11-29 Scott Dattalo <scott@dattalo.com>